--- a/index.html
+++ b/index.html
@@ -3,75 +3,55 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocTrac - Jachris Mining Service</title>
+    <title>MicroFin - AI Microcredit System</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script>
-        // --- App Configuration ---
-        // IMPORTANT: Replace the API_KEY placeholder with your actual credentials.
-        window.APP_CONFIG = {
-            // Get your Google Client ID from the Google Cloud Console:
-            // https://console.cloud.google.com/apis/credentials
-            GOOGLE_CLIENT_ID: '712294633239-jg23njr717nqdtn7rb2sgth9etddshih.apps.googleusercontent.com',
-
-            // Get your Gemini API Key from Google AI Studio:
-            // https://aistudio.google.com/app/apikey
-            API_KEY: 'AIzaSyDn26SLzguqjj5EbOzF1yq7kJK57UT2Vlg',
-        };
-        // -------------------------
-    </script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
     <script>
         tailwind.config = {
             darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
-                        primary: {
-                            '50': '#f0f0ff',
-                            '100': '#e5e5ff',
-                            '200': '#d0d0ff',
-                            '300': '#b1b1ff',
-                            '400': '#8f8fff',
-                            '500': '#5D5CDE',
-                            '600': '#5554d4',
-                            '700': '#4a49c2',
-                            '800': '#3d3ca2',
-                            '900': '#343384',
-                            '950': '#1f1e4d',
-                        },
-                    }
+                        primary: '#4F46E5', // Indigo-600
+                        secondary: '#6366F1', // Indigo-500
+                        danger: '#EF4444', // Red-500
+                        'dark-bg': '#111827', // Gray-900
+                        'dark-card': '#1F2937', // Gray-800
+                        'dark-border': '#374151', // Gray-700
+                    },
                 }
             }
         }
     </script>
-    <script>
-        // Set theme on page load to prevent FOUC
-        if (localStorage.getItem('theme') === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-            document.documentElement.classList.add('dark');
-        } else {
-            document.documentElement.classList.remove('dark');
+    <style>
+        .fade-in {
+            animation: fadeIn 0.5s ease-in-out;
         }
-    </script>
-    <script type="importmap">
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+<script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@18.2.0",
-    "react-dom": "https://esm.sh/react-dom@18.2.0",
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@0.14.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "jspdf-autotable": "https://esm.sh/jspdf-autotable@^5.0.2",
-    "jspdf": "https://esm.sh/jspdf@^3.0.1",
-    "chartjs-plugin-datalabels": "https://esm.sh/chartjs-plugin-datalabels@^2.2.0"
+    "@google/genai": "https://esm.sh/@google/genai@0.15.0",
+    "react-router-dom": "https://esm.sh/react-router-dom@6.25.0",
+    "chart.js": "https://esm.sh/chart.js@4.4.3",
+    "react-chartjs-2": "https://esm.sh/react-chartjs-2@5.2.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
+    "react/": "https://esm.sh/react@^19.1.1/"
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-gray-100 dark:bg-gray-900 text-gray-900 dark:text-gray-100 antialiased">
+<body class="bg-gray-100 dark:bg-dark-bg text-gray-900 dark:text-gray-100">
     <div id="root"></div>
-    <div id="modal-root"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
